5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1832_3179.log
== SUBMITION (2019-06-13 18:18:08) 
-- CODE:
from numpy import*
vetor=array(eval(input("vet   ")))
print(sort(vet))
-- EXECUTION TIME:
1.01947
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/3179/main.py", line 3, in <module>
    print(sort(vet))
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:18:23) 
-- CODE:
from numpy import*
vetor=array(eval(input("vet   ")))
print(sort(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:18:28) 
-- CODE:
from numpy import*
vetor=array(eval(input("vet   ")))
print(sort(vet))
-- EXECUTION TIME:
0.707985
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/3179/main.py", line 3, in <module>
    print(sort(vet))
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:18:44) 
-- CODE:
from numpy import*
vetor=array(eval(input("vet  : ")))
print(sort(vetor))
-- EXECUTION TIME:
0.868763
-- TEST CASE 1:
---- input:
[2,3,4,1,1,1,-1]
---- correct output:
[ 2  3  4 -1  1  1  1]
---- user output:
[-1  1  1  1  2  3  4]
-- TEST CASE 2:
---- input:
[1,1,1,5,4,3,2]
---- correct output:
[5 4 3 2 1 1 1]
---- user output:
[1 1 1 2 3 4 5]
-- TEST CASE 3:
---- input:
[1,0,1,2,0,1,4,1,5]
---- correct output:
[0 2 0 4 5 1 1 1 1]
---- user output:
[0 0 1 1 1 1 2 4 5]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:18:46) 
-- CODE:
from numpy import*
vetor=array(eval(input("vet  : ")))
print(sort(vetor))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:18:58) 
-- CODE:
from numpy import*
vetor=array(eval(input("vet  : ")))
print(sort(vetor))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:19:02) 
-- CODE:
from numpy import*
vetor=array(eval(input("vet  : ")))
print(sort(vetor))
-- EXECUTION TIME:
1.03642
-- TEST CASE 1:
---- input:
[2,3,4,1,1,1,-1]
---- correct output:
[ 2  3  4 -1  1  1  1]
---- user output:
[-1  1  1  1  2  3  4]
-- TEST CASE 2:
---- input:
[1,1,1,5,4,3,2]
---- correct output:
[5 4 3 2 1 1 1]
---- user output:
[1 1 1 2 3 4 5]
-- TEST CASE 3:
---- input:
[1,0,1,2,0,1,4,1,5]
---- correct output:
[0 2 0 4 5 1 1 1 1]
---- user output:
[0 0 1 1 1 1 2 4 5]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
